appId: nz.co.atmosmedia.app
---
- tapOn: "Tickets"
- runFlow: _beat.yaml
- tapOn: "SIGN IN"
- runFlow: _pause.yaml
- runFlow:
    file: _sign-in.yaml
    env:
      EMAIL: review-customer@atmosmedia.co.nz
- extendedWaitUntil:
    visible: "Atmos Demo Night"
    timeout: 15000
- runFlow: _pause.yaml
