appId: nz.co.atmosmedia.app
---
- runFlow: _pause.yaml
- swipe:
    direction: UP
    duration: 1400
- runFlow: _pause.yaml
- tapOn: "Gigs"
- runFlow: _pause.yaml
- tapOn: ".*FRI 9 OCT.*"
- runFlow: _pause.yaml
- swipe:
    direction: UP
    duration: 1400
- runFlow: _pause.yaml
- tapOn: "Back"
- runFlow: _beat.yaml
